081_expr_eval1/grade.txt
Grading at 10/18/2018:23:37:47.542540
For commit ID 675b0206ad9352136c5353ca583464cde38d1064
Compiling code
In file included from expr.cpp:2:0:
expr.h: In member function ‘virtual std::__cxx11::string NumExpression::toString() const’:
expr.h:22:54: error: ‘to_string’ is not a member of ‘std’
   virtual std::string toString() const { return std::to_string(val); }
                                                      ^~~~~~~~~
expr.h:22:54: note: suggested alternative: ‘__sso_string’
   virtual std::string toString() const { return std::to_string(val); }
                                                      ^~~~~~~~~
                                                      __sso_string
The code did not compile.

Overall Grade: F
